
file(GLOB HDBSCAN_CSRC "*.c")
file(GLOB HDBSCAN_CPPSRC "*.cpp")

add_library(${HDBSCAN_LIBRARY} SHARED ${HDBSCAN_CSRC} ${HDBSCAN_CPPSRC})
target_link_libraries(${HDBSCAN_LIBRARY} LINK_PUBLIC ${GLIB2_LIBRARIES} ${GSL_LIBRARIES} m LINK_PRIVATE ${LIST_LIB} ${GNU_LIB})

add_library(${HDBSCAN_LIBRARY}_static STATIC ${HDBSCAN_CSRC} ${HDBSCAN_CPPSRC})
target_link_libraries(${HDBSCAN_LIBRARY}_static LINK_PUBLIC ${GLIB2_LIBRARIES} ${GSL_LIBRARIES} m LINK_PRIVATE ${LIST_LIB}_static ${GNU_LIB}_static)

include_directories(${HDBSCAN_INCLUDE_DIR} ${GLIB2_INCLUDE_DIRS} ${LISTLIB_INCLUDE_DIR} ${GNULIB_INCLUDE_DIR})
  
install(TARGETS ${HDBSCAN_LIBRARY}
  # IMPORTANT: Add the hdbscan library to the "export-set"
  EXPORT HdbscanTargets
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT shlib)
