file(GLOB HDBSCAN_CSRC "*.c")
file(GLOB HDBSCAN_CPPSRC "*.cpp")

add_library(${HDBSCAN_LIBRARY} SHARED ${HDBSCAN_CSRC} ${HDBSCAN_CPPSRC})
target_link_libraries(${HDBSCAN_LIBRARY} LINK_PUBLIC m LINK_PRIVATE ${COLLECTIONS_LIBRARY}_static ${UTILS_LIBRARY})

add_library(${HDBSCAN_LIBRARY}_static STATIC ${HDBSCAN_CSRC} ${HDBSCAN_CPPSRC})
target_link_libraries(${HDBSCAN_LIBRARY}_static LINK_PUBLIC m ${COLLECTIONS_LIBRARY} LINK_PRIVATE ${UTILS_LIBRARY})
include_directories(${UTILS_INCLUDE_DIR} ${HDBSCAN_INCLUDE_DIR} ${COLLECTIONS_INCLUDE_DIR})
  
install(TARGETS ${HDBSCAN_LIBRARY}
  # IMPORTANT: Add the hdbscan library to the "export-set"
  EXPORT HdbscanTargets
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT lib
)
  
# INSTALL(CODE "execute_process( \
#   COMMAND ${CMAKE_COMMAND} -E create_symlink \
#   ${INSTALL_LIB_DIR}/lib${HDBSCAN_LIBRARY}-${HDBSCAN_VERSION}.so \
#   ${INSTALL_LIB_DIR}/lib${HDBSCAN_LIBRARY}.so   \
#   )"
# )
