project(hdbscan_tests)

#add_executable(collections_prime_tests primetests.c)
#target_link_libraries(collections_prime_tests ${COLLECTIONS_LIBRARY}_static cunit)

#add_executable(collections_arraylist_tests listtests.c)
#target_link_libraries(collections_arraylist_tests ${COLLECTIONS_LIBRARY}_static cunit)

#add_executable(collections_linkedlist_tests linkedlisttests.c)
#target_link_libraries(collections_linkedlist_tests ${COLLECTIONS_LIBRARY}_static cunit)

#include_directories(${HDBSCAN_INCLUDE_DIR} ${GLIB2_INCLUDE_DIRS})