project (collections)

file(GLOB_RECURSE COLLECTIONS_SRC_FILES ${COLLECTIONS_SRC_DIR}/*.c)
add_library(${COLLECTIONS_LIBRARY} SHARED ${COLLECTIONS_SRC_FILES})
target_link_libraries(${COLLECTIONS_LIBRARY} LINK_PUBLIC m )
target_link_libraries(${COLLECTIONS_LIBRARY} LINK_PRIVATE ${UTILS_LIBRARY})

add_library(${COLLECTIONS_LIBRARY}_static STATIC ${COLLECTIONS_SRC_FILES})
target_link_libraries(${COLLECTIONS_LIBRARY}_static LINK_PUBLIC m ${UTILS_LIBRARY})
include_directories(${HDBSCAN_INCLUDE_DIR})

install(TARGETS ${COLLECTIONS_LIBRARY}
  EXPORT HdbscanTargets
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT lib
)

# set_target_properties(
#   ${COLLECTIONS_LIBRARY} PROPERTIES 
#   VERSION ${PROJECT_VERSION}
#   SOVERSION ${PROJECT_VERSION_MAJOR}
# )
  
# INSTALL(CODE "execute_process( \
#   COMMAND ${CMAKE_COMMAND} -E create_symlink \
#   ${INSTALL_LIB_DIR}/lib${COLLECTIONS_LIBRARY}-${HDBSCAN_VERSION}.so \
#   ${INSTALL_LIB_DIR}/lib${COLLECTIONS_LIBRARY}.so   \
#   )"
# )