project (${UTILS_LIBRARY} VERSION ${HDBSCAN_VERSION})

file(GLOB_RECURSE UTILS_SRC_FILES ${UTILS_SRC_DIR}/*.c)

add_library(${UTILS_LIBRARY} SHARED ${UTILS_SRC_FILES})
target_link_libraries(${UTILS_LIBRARY} LINK_PUBLIC m )
include_directories(${UTILS_INCLUDE_DIR})

install(TARGETS ${UTILS_LIBRARY}
  EXPORT HdbscanTargets
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT lib
)
